// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`global.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare global {
    interface Event {
	    persist: Function
  	}
}

=====================================output=====================================
declare global {
  interface Event {
    persist: Function;
  }
}

================================================================================
`;

exports[`moduleNamespace.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
declare module "f" {}

namespace f {}

=====================================output=====================================
declare module "f" {}

namespace f {}

================================================================================
`;

exports[`nestedNamespace.ts format 1`] = `
====================================options=====================================
parsers: ["typescript"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
namespace X {
    export namespace Y {

    }
}

namespace X.Y {

}

=====================================output=====================================
namespace X {
  export namespace Y {}
}

namespace X.Y {}

================================================================================
`;
